--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,35 @@ a {
     text-decoration: none;
 }
 
+img {
+    display: block;
+}
+
+.container {
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.container-header {
+    display: flex;
+}
+
+.nav-list {
+    display: flex;
+    align-items: center;
+}
+
+.nav-list-item {
+    display: flex;
+    gap: 40px;
+    padding: 24px 0;
+}
+
 .link {
     line-height: 1.5;
     letter-spacing: 0.02em;
@@ -37,6 +66,12 @@ a {
 
 .address-list {
     font-style: normal;
+}
+
+.address-list-item {
+    display: flex;
+    gap: 40px;
+    padding: 24px 0;
 }
 
 .link-address {
@@ -58,6 +93,7 @@ a {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-right: 76px;
 }
 
 .section-one {
@@ -200,26 +236,8 @@ a {
     color: #2e2f42;
 }
 
-.container {
-    max-width: 1128px;
-    padding: 0 15px;
-    margin: 0 auto;
-}
-
 .benefits-list, h3 {
     margin-bottom: 8px;
-}
-
-.nav-list {
-    display: flex;
-}
-
-.nav-list-item {
-    display: flex;
-}
-
-.address-list-item {
-    display: flex;
 }
 
 .benefits-list {
