--- a/css/styles.css
+++ b/css/styles.css
@@ -165,11 +165,16 @@ img {
 }
 
 .benefits-item {
+    width: calc((100%-3*24px)/4);
+}
+
+.benefits-title {
     font-weight: 500;
     font-size: 20px;
     line-height: 120%;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
 .benefits-p {
@@ -183,6 +188,7 @@ img {
 /* Our team */
 
 .section-three {
+    padding: 120px 0;
     background-color: #f4f4fd;
 }
 
@@ -206,12 +212,19 @@ img {
     background-color: #ffffff;
 }
 
+.container-team {
+    border-radius: 0px 0px 4px 4px;
+    padding: 32px 0;
+}
+
 .team-item {
     font-weight: 500;
     font-size: 20px;
     line-height: 120%;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-align: center;
+    margin-bottom: 8px;
 }
 
 .team-list-p {
@@ -221,6 +234,7 @@ img {
     color: #434455;
     font-size: 16px;
     letter-spacing: 0.02em;
+    text-align: center;
 }
 
 /* Our portfolio */
