--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,7 @@ img {
 }
 
 .portfolio-list-item {
-    width: calc((100%-3*24px)/4);
+    width: calc((100%-48px)/3);
 }
 
 .container-portfolio {
@@ -278,6 +278,7 @@ img {
     line-height: 120%;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 
 .portfolio-list-p {
@@ -291,7 +292,20 @@ img {
 /* Footer */
 
 .footer {
+    padding: 100px 0;
     background-color: #2e2f42;
+}
+
+.link-logo-footer {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 117%;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .webstudio-footer {
@@ -304,4 +318,5 @@ img {
     line-height: 150%;
     color: #f4f4fd;
     letter-spacing: 0.02em;
+    max-width: 264px
 }
