--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ img {
 
 .container-header {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav-list {
@@ -119,6 +121,7 @@ img {
     text-align: center;
     letter-spacing: 0.02em;
     max-width: 496px;
+    margin: 0px auto 48px auto;
 }
 
 .button {
@@ -133,6 +136,7 @@ img {
     height: 56px;
     border: none;
     border-radius: 4px;
+    margin: 0 auto;
 }
 
 .button:hover,
