--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,7 @@ img {
     font-weight: 500;
     color: #2e2f42;
     padding: 24px 0;
+    display: block;
 }
 
 .link:hover, .link:focus {
@@ -98,7 +99,7 @@ img {
 .link-address {
     line-height: 1.5;
     letter-spacing: 0.02em;
-    font-weight: 500;
+    font-weight: 400;
     color: #434455;
 }
 
@@ -169,7 +170,7 @@ img {
 }
 
 .benefits-item {
-    width: calc((100%-3*24px)/4);
+    width: calc((100% - 3 * 24px) / 4);
 }
 
 .benefits-title {
@@ -213,6 +214,7 @@ img {
 }
 
 .img-background {
+    width: calc((100% - 24px) / 4 ) ;
     border-radius: 0px 0px 4px 4px;
     background-color: #ffffff;
 }
@@ -273,7 +275,6 @@ img {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px;
 }
 
 .portfolio-title {
